--- a/fa-x.css
+++ b/fa-x.css
@@ -11,7 +11,9 @@
   font-weight: normal;
   font-style: normal;
 }
-.fa {
+.fa,
+.fax-input input[type=radio] + label:before,
+.fax-input input[type=checkbox] + label:before {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
@@ -1866,7 +1868,9 @@ hr {
 }
 /* icon */
 .fax,
-.fax-sep {
+.fax-sep,
+.fax-input input[type=radio] + label:before,
+.fax-input input[type=checkbox] + label:before {
   color: #333333;
   text-shadow: 0em 0em 0.071em #ffffff;
   margin: 0em;
@@ -2341,12 +2345,12 @@ sup.fax-emblem {
 .fax-input label {
   display: inline-block;
   height: 1.429em;
+  margin-top: -0.214em;
+  margin-bottom: 0em;
   margin-left: -0.429em;
   margin-right: 1.143em;
-  padding-top: 0.214em;
-  padding-bottom: 0.214em;
-  padding-left: 0.286em;
-  padding-right: 0.286em;
+  padding: 0.286em;
+  padding-top: 0.5em;
   color: #333333;
   transition: background-color 0.2s ease-out;
   text-shadow: 0em 0em 0.071em #ffffff;
@@ -2357,17 +2361,25 @@ sup.fax-emblem {
 }
 .fax-input input[type=radio],
 .fax-input input[type=checkbox] {
-  margin: 0em;
-  margin-right: 0.429em;
-  vertical-align: -0.214em;
-  padding: 0em;
-  outline: none;
+  display: none;
 }
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  .fax-input input[type=radio],
-  .fax-input input[type=checkbox] {
-    vertical-align: -0.143em;
-  }
+.fax-input input[type=radio] + label:before {
+  width: 1em;
+  margin-right: 0.286em;
+  text-align: center;
+  content: "\f10c";
+}
+.fax-input input[type=radio]:checked + label:before {
+  content: "\f192";
+}
+.fax-input input[type=checkbox] + label:before {
+  width: 1em;
+  margin-right: 0.286em;
+  text-align: center;
+  content: "\f096";
+}
+.fax-input input[type=checkbox]:checked + label:before {
+  content: "\f046";
 }
 /* tables */
 .fax-table {
